--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Deployment</title>
+  <title>CICD Deploy by Nadia </title>
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
+      background-color: #fcc9b1;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
