--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #fcc9b1;
+      background-color: #7763c2;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
